Add Vercel configuration and build script

--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
 
+    <title>A $277M Setback: NYC's Outdated Pricing Model</title>
+
     <meta property="og:title" content="A $277,000,000 Setback: NYC's Outdated Pricing Model" />
     <meta property="og:description" content="A data analytics project exploring the financial impact of NYC's flat fare system." />
     <meta property="og:type" content="website" />
